--- a/login.html
+++ b/login.html
@@ -19,8 +19,7 @@
     </header>
     <div id="main">
       <article>
-        <h1 style="text-align: center">Welcome to Movie Rentals!</h1>
-        <div style="background-color: lightgrey; width: 40%; margin: auto; padding: 1em">
+        <div id="login_box">
           <form method="GET" action="/shop.html">
             <label>Email</label><br />
             <input type="text" name="email" style="width: 100%" />
