Add all shop filter.

--- a/shop.html
+++ b/shop.html
@@ -20,6 +20,7 @@
         <br />
         Genres:
         <ul>
+          <li><button onclick="layout()">All</button></li>
           <li><button onclick="layout('Adventure')">Adventure</button></li>
           <li><button onclick="layout('Animation')">Animation</button></li>
           <li><button onclick="layout('Science fiction')">Science fiction</button></li>
