Added background picture to login page

--- a/login.html
+++ b/login.html
@@ -13,6 +13,13 @@
       rel="stylesheet"
     />
   </head>
+  <style>
+  body{
+	background-image: url('theatre.jpeg');
+  	background-repeat: no-repeat;
+  	background-size: cover;
+  }
+  </style>
   <body>
     <header>
       <strong>Movie Rentals</strong>
