--- a/order.html
+++ b/order.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Rentals</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="/styles/main.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,31 +23,31 @@
         <h1 style="text-align: centre">Payment Details</h1>
         <div style="background-color: lightgrey; width: 70%; margin: auto; padding: 2em">
           <form method="GET" action="/invoice.html" onsubmit="storeData()">
-            <div>
+            <div class="form-group">
               <span>Title:</span>
-              <input type="text" id="title" />
+              <input class="form-control" type="text" id="title" />
               <span>First Name:</span>
-              <input type="text" id="firstName" />
+              <input class="form-control" type="text" id="firstName" />
               <span>Surname:</span>
-              <input type="text" id="surname" />
+              <input class="form-control" type="text" id="surname" />
             </div>
             <hr />
-            <div>
+            <div class="form-group">
               <span>Number:</span>
-              <input type="text" id="addressNumber" />
+              <input class="form-control" type="text" id="addressNumber" />
               <span>Street:</span>
-              <input type="text" id="addressStreet" />
+              <input class="form-control" type="text" id="addressStreet" />
               <span>Country:</span>
-              <input type="text" id="addressCountry" />
+              <input class="form-control" type="text" id="addressCountry" />
             </div>
-            <div>
+            <div class="form-group">
               <span>Postcode:</span>
-              <input type="text" id="addressPostcode" />
+              <input class="form-control" type="text" id="addressPostcode" />
               <span>City:</span>
-              <input type="text" id="addressCity" />
+              <input class="form-control" type="text" id="addressCity" />
             </div>
             <hr />
-            <div>
+            <div class="form-group">
               <span>Card Type:</span>
               <input type="radio" name="card" value="visa" id="visa" checked />
               <label for="visa">Visa</label>
@@ -56,15 +57,17 @@
               <label for="mastercard">Mastercard</label>
               <input type="radio" name="card" value="switch" id="switch" />
               <label for="switch">Switch</label>
-              <span>Card Number:</span>
-              <input type="number" id="cardNumber"/>
-              <span>Expiry Date:</span>
-              <input type="text" id="expiryMonth" />
-              <input type="text" id="expiryYear"/>
             </div>
+            <div class="form-group"></div>
+              <span>Card Number:</span>
+              <input class="form-control" type="number" id="cardNumber"/>
+              <span>Expiry Date:</span>
+              <input class="form-control" type="text" id="expiryMonth" />
+              <span>Security Code:</span>
+              <input class="form-control" type="text" id="expiryYear"/>
             <div>
-              <button type="button" onclick="window.location.href='/shop.html'">Cancel</a>
-              <button type="submit">Proceed</button>
+              <button class="btn btn-secondary" type="button" onclick="window.location.href='/shop.html'">Cancel</a>
+              <button class="btn btn-primary" type="submit">Proceed</button>
             </div>
           </form>
         </div>
@@ -89,3 +92,4 @@
     }
   </script>
 </html>
+
