--- a/shop.html
+++ b/shop.html
@@ -57,15 +57,15 @@
                     movieList.innerHTML += `
                         <div class="movie">
                           <div>
-                            <img src="${movie.image}" />
+                            <img class ="image" src="${movie.image}" />
                           </div>
-                          <div style="margin: 0 0.75em">
+                          <div style="margin: 0 0.75em; width:60%;">
                             <h4 style="margin: 0">${movie.name}</h4>
                             <p>
                               ${movie.description}
                             </p>
                           </div>
-                          <div>
+                          <div style="float: right;">
                             <a href="/movie.html?id=${movie.id}">View Movie</a><br />
                             <label>Days to rent:</label><br />
                             <input id="days-to-rent-${movie.name}" value="3" /><br />
