Make sidebar work.

--- a/_navbar.html
+++ b/_navbar.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav class="navbar navbar-static-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid ">
         <a class="navbar-brand" href="#">Movie Rentals</a>
         <ul class="navbar-nav mr-auto">
