--- a/shop.html
+++ b/shop.html
@@ -54,7 +54,7 @@
                           <div style="float: right;">
                             <a href="/movie.html?id=${movie.id}">View Movie</a><br />
                             <label>Days to rent:</label><br />
-                            <input id="days-to-rent-${movie.name}" value="3" /><br />
+                            <input id="days-to-rent-${movie.id}" value="3" /><br />
                             <button style="width: 100px; height: 50px" onclick="addToBasket(${movie.id})">Add to Basket</button>
                           </div>
                         </div>
