--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
           
-        <div class="col-mg-2 col-sm-2">
+        <div class="col-mg col-sm">
             <article id="movie_list">
               
             </article>
@@ -41,21 +41,28 @@
                 if(!genre || movie.genre.split(', ').includes(genre)) {                
                     // This is the wrong way to do this as it has a large risk of including arbitrary HTML tags, but security doesn't matter.
                     movieList.innerHTML += `
-                        <div class="movie">
-                          <div>
-                            <img class ="image" src="${movie.image}" />
-                          </div>
-                          <div style="margin: 0 0.75em; width:60%;">
-                            <h4 style="margin: 0">${movie.name}</h4>
-                            <p>
-                              ${movie.description}
-                            </p>
-                          </div>
-                          <div style="float: right;">
-                            <a href="/movie.html?id=${movie.id}">View Movie</a><br />
-                            <label>Days to rent:</label><br />
-                            <input id="days-to-rent-${movie.id}" value="3" /><br />
-                            <button style="width: 100px; height: 50px" onclick="addToBasket(${movie.id})">Add to Basket</button>
+                        <div class="container">
+                          <div class="row">
+                              <div class="col">
+                                  <div>
+                                    <img class ="image" src="${movie.image}" />
+                                  </div>
+                              </div>
+
+                              <div class="col">
+                                  <div style="">
+                                    <h4 style="">${movie.name}</h4>
+                                    <p>
+                                      ${movie.description}
+                                    </p>
+                                  </div>
+                                  <div>
+                                    <a href="/movie.html?id=${movie.id}">View Movie</a><br />
+                                    <label>Days to rent:</label><br />
+                                    <input id="days-to-rent-${movie.id}" value="3" /><br />
+                                    <button class="btn btn-primary" onclick="addToBasket(${movie.id})">Add to Basket</button>
+                                  </div>
+                              </div>
                           </div>
                         </div>
                     `;
