--- a/shop.html
+++ b/shop.html
@@ -11,14 +11,14 @@
       <div class="row">
         <div id="sidebar" class="col-mg-2 col-sm-2">
             <ul class="">
-              <li><button onclick="layout()">All</button></li>
-              <li><button onclick="layout('Adventure')">Adventure</button></li>
-              <li><button onclick="layout('Animation')">Animation</button></li>
-              <li><button onclick="layout('Science fiction')">Science fiction</button></li>
-              <li><button onclick="layout('Comedy')">Comedy</button></li>
-              <li><button onclick="layout('Drama')">Drama</button></li>
-              <li><button onclick="layout('Horror')">Horror</button></li>
-              <li><button onclick="layout('Action')">Action</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout()">All</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout('Adventure')">Adventure</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout('Animation')">Animation</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout('Science fiction')">Science fiction</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout('Comedy')">Comedy</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout('Drama')">Drama</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout('Horror')">Horror</button></li>
+              <li><button type="button" class="btn btn-secondary" onclick="layout('Action')">Action</button></li>
             </ul>
         </div>
           
