More changes to form

--- a/order.html
+++ b/order.html
@@ -60,10 +60,10 @@
             </div>
             <div class="form-group"></div>
               <span>Card Number:</span>
-              <input class="form-control" type="number" id="cardNumber"/>
+              <input class="form-control" type="text" id="cardNumber"/>
               <span>Expiry Date:</span>
               <input class="form-control" type="text" id="expiryMonth" />
-              <span>Security Code:</span>
+              <span>CVV Code:</span>
               <input class="form-control" type="text" id="expiryYear"/>
             <div>
               <button class="btn btn-secondary" type="button" onclick="window.location.href='/shop.html'">Cancel</a>
