--- a/shop.html
+++ b/shop.html
@@ -60,14 +60,14 @@
                             <img class ="image" src="${movie.image}" />
                           </div>
                           <div style="margin: 0 0.75em; width:60%;">
-                            <h4 style="margin: 0">${movie.name}</h4>
-                            <p>
+                            <h4 style="margin: 0; color: white; font-family: Helvetica, sans-serif">${movie.name}</h4>
+                            <p style="color: white; font-family: Helvetica, sans-serif">
                               ${movie.description}
                             </p>
                           </div>
                           <div style="float: right;">
-                            <a href="/movie.html?id=${movie.id}">View Movie</a><br />
-                            <label>Days to rent:</label><br />
+                            <a href="/movie.html?id=${movie.id}" style="color: #fca311">View Movie</a><br />
+                            <label style="color: white; font-family: Helvetica, sans-serif">Days to rent:</label><br />
                             <input id="days-to-rent-${movie.name}" value="3" /><br />
                             <button style="width: 100px; height: 50px" onclick="addToBasket(${movie.id})">Add to Basket</button>
                           </div>
