--- a/shop.html
+++ b/shop.html
@@ -67,8 +67,10 @@
                           </div>
                           <div style="float: right;">
                             <a href="/movie.html?id=${movie.id}" style="color: #fca311">View Movie</a><br />
+<br>
                             <label style="color: white; font-family: Helvetica, sans-serif">Days to rent:</label><br />
-                            <input id="days-to-rent-${movie.name}" value="3" /><br />
+                            <input id="days-to-rent-${movie.name}" value="3" / style="width: 100px"><br />
+<br>
                             <button style="width: 100px; height: 50px" onclick="addToBasket(${movie.id})">Add to Basket</button>
                           </div>
                         </div>
