Made text more readable

--- a/movie.html
+++ b/movie.html
@@ -37,19 +37,20 @@
         <a href="/login.html"><strong>Exit</strong></a>
       </nav>
       <article>
-        <h1 id="movie-title"></h1>
-        <strong>Release Date: </strong>
-        <p id="movie-release-date"></p>
-        <strong>Genres: </strong>
-        <p id="movie-genre"></p>
-        <strong>Director: </strong>
-        <p id="movie-director"></p>
-        <strong>Actors: </strong>
-        <p id="movie-actors"></p>
-        <strong>Price per day: </strong>
-        <p id="movie-price"></p>
+        <h1 id="movie-title" style="color: white; font-family: Helvetica, sans-serif"></h1>
+        <strong style="color: white; font-family: Helvetica, sans-serif">Release Date: </strong>
+        <p id="movie-release-date" style="color: white; font-family: Helvetica, sans-serif"></p>
+        <strong style="color: white; font-family: Helvetica, sans-serif">Genres: </strong>
+        <p id="movie-genre" style="color: white; font-family: Helvetica, sans-serif"></p>
+        <strong style="color: white; font-family: Helvetica, sans-serif">Director: </strong>
+        <p id="movie-director" style="color: white; font-family: Helvetica, sans-serif"></p>
+        <strong style="color: white; font-family: Helvetica, sans-serif">Actors: </strong>
+        <p id="movie-actors" style="color: white; font-family: Helvetica, sans-serif"></p>
+        <strong style="color: white; font-family: Helvetica, sans-serif">Price per day: </strong>
+        <p id="movie-price" style="color: white; font-family: Helvetica, sans-serif"></p>
         <img id="movie-image" src="" />
-        <p id="movie-description"></p>
+        <p id="movie-description" style="color: white; font-family: Helvetica, sans-serif"></p>
+	<a href="/shop.html" style="color: #fca311; font-family: Helvetica, sans-serif">Continue Shopping</a>
       </article>
     </div>
   </body>
