Make text more readable

--- a/login.html
+++ b/login.html
@@ -28,17 +28,17 @@
       <article>
         <div id="login_box">
           <form method="GET" action="/shop.html">
-            <label>Email</label><br />
-            <input type="text" name="email" style="width: 100%" />
+            <label style="font-family: Helvetica, sans-serif"><span style="display: inline-block; margin-left: 5px"></span>Email</label><br />
+            <input type="text" name="email" style="width: 100%; height: 30px" />
             <br />
             <br />
-            <label>Password</label><br />
-            <input type="password" name="password" style="width: 100%" />
+            <label style="font-family: Helvetica, sans-serif"><span style="display: inline-block; margin-left: 5px"></span>Password</label><br />
+            <input type="password" name="password" style="width: 100%; height: 30px" />
             <br />
             <br />
             <div style="width: 100%; text-align: center">
-              <button type="submit" name="action" value="login" style="width: 45%">Sign In</button>
-              <button type="submit" name="action" value="login" style="width: 45%">Sign Up</button>
+              <button type="submit" name="action" value="login" style="width: 45%; height: 30px; font-family: Helvetica, sans-serif; font-size: 1em">Sign In</button>
+              <button type="submit" name="action" value="login" style="width: 45%; height: 30px; font-family: Helvetica, sans-serif; font-size: 1em">Sign Up</button>
             </div>
           </form>
         </div>
