--- a/basket.html
+++ b/basket.html
@@ -11,9 +11,9 @@
     <header>
 %include _head.html
 
-      <strong>Movie Rentals</strong>
-
     </header>
+
+%include _navbar.html
 
     <div class="container-fluid">
       <div class="row">
@@ -35,7 +35,7 @@
 
               <a class="btn btn-secondary" href="/shop.html">Continue Shopping</a>
 
-              <button class="btn btn-danger" onclick="localStorage.setItem('basket', '[]');">Clear Basket</button>
+              <button class="btn btn-danger" onclick="localStorage.setItem('basket', '[]');location.reload()">Clear Basket</button>
             </div>
         </div>
 
